fix(bootstrap-componenents): for alert-info, put before behind content

--- a/styles/components/bootstrap-components.css
+++ b/styles/components/bootstrap-components.css
@@ -43,6 +43,7 @@
   position: relative;
   background-color: transparent !important;
   color:var(--neutral-color) !important;
+  z-index: 0;
 }
 .alert-default:before, .alert-info:before {
   content: " ";
@@ -53,6 +54,7 @@
   bottom: 0;
   border-radius: .3rem;
   opacity: .3;
+  z-index: -1;
 }
 .alert-default:before {
   background-color: var(--neutral-color);
